**  denotes quite substantial/important changes
*** denotes really big changes 

Currently deprecated and liable to be removed: 
- single penalty tensor product smooths.
- p.type!=0 in summary.gam.

1.8-17

* "bs" basis modified to allow easier control of the interval over which the
  spline penalty applies which in turn allows more sensible control of 
  extrapolation behaviour, when this is unavoidable. 

* Fix in uniquecombs - revised faster code (from 1.8-13) could occasionally 
  generate false matches between different input combinations for integer 
  variables or factors. Thanks to Rohan Sadler for reporting the issue that 
  uncovered this. 

* A very bad initial model for uninformative data could lead to a negative 
  fletcher estimate of the scale parameter and optimizer failure - fixed. 

* "fREML" allowed in sp.vcov so that it works with bam fitted models.

* 2 occurances of 'return' replaced by (correct) return().	

1.8-16

* slightly improved intial value heuristics for overlapping penalties in 
  general family case.

* 'ocat' checks that response is numeric.

* plot.gam(...,scale=-1) now changes scale according to 'trans' and 'shift'.

* newton optimizer made slightly more cautious: contracts step if reduction 
  in true objective too far different from reduction predicted by quadratic 
  approximation underlying Newton step. Also leaves parameters unchanged 
  in Newton step while their grad is less than 1% of max grad.  

* Fix to Fisher weight computation in gam.fit4. Previously a weight could
  (rarely) evaluate as negative machine prec instead of zero, get passed to 
  gdi2 in C code, generate a NaN when square rooted, resulting in a NaN passed
  to the LAPACK dgeqp3 routine, which then hung in a non-interuptable way.  

* Fix of 'sp' argument handling with multiple formulae. Allocation to terms 
  could be incorrect. 

* Option 'edge.correct' added to 'gam.control' to allow better correction