@@ -7,6 +7,9 @@ Currently deprecated and liable to be removed:
 
 1.8-17
 
+* Export gamlss.etamu, gamlss.gH and trind.generator to facilitate user 
+  addition of new location-scale families. 
+
 * "bs" basis modified to allow easier control of the interval over which the
   spline penalty applies which in turn allows more sensible control of 
   extrapolation behaviour, when this is unavoidable. 
